# Hyper-notes

./: .gitattributes  .gitignore  CMakeLists.txt  ForceSimulation.cpp  ForceSimulation.h  HyperLinkNotes.qmlproject  HyperLinkNotes.qmlproject.qtds  HyperLinkNotes.qrc  LICENSE  Main.qml  MarkdownHighlighter.cpp  MarkdownHighlighter.h  NOTICE.md  QA_REPORT.md  README.md  Theme.qml  VaultRepository.cpp  VaultRepository.h  VaultViewModel.cpp  VaultViewModel.h  asconfig.json  extract.cjs  index.html  inspect.cjs  main.cpp  package-lock.json  package.json  rewrite_graph2.cjs  search.cjs  tsconfig.json  vite.config.ts  wat.cjs
.agents/: AGENTS.md
.claude/: launch.json
.github/workflows/: release.yml
assembly/: physics.ts
docs/: RELEASE_NOTES_v2.md  qt_cpp_pro_practices.md
packaging/: README.md  build_release.ps1  installer.iss
qml/: Main.qml
qml/scripts/drag/: beginDragProxy.js  handleDropPath.js  updateDragProxy.js
qml/scripts/editor/: branchNote.js  buildContext.js  createNoteFromSelection.js  frontmatter.js  wrapSelectionInLink.js
qml/scripts/file/: createNoteInRoot.js  openFileByPath.js  saveTitleNow.js
qml/scripts/graph/: buildGraphData.js  calculateLayers.js  extractLinks.js  findNodeByPath.js  flattenNotes.js  getNeighbors.js
qml/scripts/navigation/: goBack.js  pushHistory.js
qml/scripts/tree/: flattenVisible.js  search.js  searchFlat.js
qml/scripts/window/: openNewFolderDialog.js
qml/ui/components/: IconButton.qml  SidebarToggleButton.qml  SmoothWheel.qml  ThemedScrollBar.qml  WindowControlButton.qml
qml/ui/core/: BinPanel.qml  NewTabView.qml  Outline.qml  RightPanel.qml  SettingsPanel.qml  StatusBar.qml  TabStrip.qml  TitleBar.qml
qml/ui/dialogs/: NewFolderDialog.qml  RenameWarningPopup.qml
qml/ui/editor/: EditorHeader.qml  LivePreviewEditor.qml  NoteEditor.qml  NoteSearchBar.qml
qml/ui/graph/: GraphNode.qml  GraphView.qml  MiniGraph.qml
qml/ui/sidebar/: FileTree.qml  Sidebar.qml  SidebarHeader.qml  TreeContextMenu.qml
scripts/: embed-wasm.cjs
scripts/drag/: endDragProxy.js
scripts/editor/: frontmatter.js  openLink.js
scripts/file/: createNewNote.js  openFileByPath.js
scripts/graph/: buildGlobalGraph.js  computePositions.js
scripts/navigation/: goBack.js  goForward.js
scripts/tree/: filterTree.js  refreshTree.js  runExpansionAnimation.js  selectionUtils.js  toggleExpansion.js
scripts/window/: deleteNodePermanently.js  toggleMaximize.js
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bin.rs  keys.rs  llm.rs  mod.rs  search.rs  util.rs  vault.rs
src/ai/: LlmService.cpp  LlmService.h  context.ts  llmService.ts  typewriter.ts
src/backend/: keysApi.ts  llmApi.ts  vaultApi.ts  window.ts
src/components/: IconButton.tsx  SidebarToggleButton.tsx  StatusBar.tsx  TabStrip.tsx  TitleBar.tsx  WindowControlButton.tsx  chrome.css
src/components/core/: BinPanel.tsx  EmptyState.tsx  GraphSettingsSection.tsx  MenuPointAnchor.tsx  NewTabView.tsx  Presence.tsx  ResizeHandle.tsx  SettingsPanel.tsx
src/components/dialogs/: AddNoteDialog.tsx  DeleteConfirmDialog.tsx  DialogShell.tsx  NewFolderDialog.tsx  RenameDialog.tsx
src/components/editor/: AskBar.tsx  Editor.tsx  EditorContextMenu.tsx  EditorToolbar.tsx  NoteSearchBar.tsx  WikilinkHoverCard.tsx
src/components/graph/: GraphView.tsx  MiniGraph.tsx
src/components/icons/: Icons.tsx
src/components/right/: Outline.tsx  RightPanel.tsx
src/core/: VaultRepository.cpp  VaultRepository.h  VaultViewModel.cpp  VaultViewModel.h
src/editor/: callouts.ts  createEditorState.ts  editorTheme.ts  folding.ts  frontmatter.ts  indentGuides.ts  linkShortcuts.ts  livePreview.ts  markdownRender.ts  noteSearch.ts  noteTitle.ts  obsidianMarkdown.ts  properties.ts  taskInteractions.ts  wikilinkComplete.ts  wikilinkInteractions.ts
src/graph/: BuildEdgeGeometry.cpp  BuildEdgeGeometry.h  GraphCanvas.ts  GraphRenderer.cpp  GraphRenderer.h  buildGraphData.ts  getNeighbors.ts  graphColors.ts  physics.ts  physics.wasm  physics.wat  physicsWasm.ts  physicsWasmBinary.ts  physicsWorker.ts  wikilinkParse.ts
src/markdown/: HighlightCodeBlocks.cpp  HighlightCodeBlocks.h  HighlightEmphasis.cpp  HighlightEmphasis.h  HighlightHeaders.cpp  HighlightHeaders.h  HighlightLinks.cpp  HighlightLinks.h  HighlightLists.cpp  HighlightLists.h
src/physics/: ApplyIntegration.cpp  ApplyIntegration.h  CalculateCollision.cpp  CalculateCollision.h  CalculateGravity.cpp  CalculateGravity.h  CalculateRepulsion.cpp  CalculateRepulsion.h  CalculateSprings.cpp  CalculateSprings.h  PhysicsTypes.h  PhysicsWorker.cpp  PhysicsWorker.h
src/state/: ai.ts  bin.ts  documents.ts  editor.ts  graphSettings.ts  platform.ts  session.ts  settings.ts  theme.ts  ui.ts  vault.ts  vaultTypes.ts  wikilink.ts
src/theme/: colorEngine.ts  motion.css  palette.ts  theme.css
src/vault/: BinIndex.cpp  BinIndex.h  CreateFolder.cpp  CreateFolder.h  CreateNote.cpp  CreateNote.h  DeleteFromBin.cpp  DeleteFromBin.h  DeleteItem.cpp  DeleteItem.h  GetBinTree.cpp  GetBinTree.h  IsFileNameAvailable.cpp  IsFileNameAvailable.h  MoveItem.cpp  MoveItem.h  MoveToBin.cpp  MoveToBin.h  ReadFile.cpp  ReadFile.h  RenameFile.cpp  RenameFile.h  RestoreFromBin.cpp  RestoreFromBin.h  SaveFile.cpp  SaveFile.h  ScanDirectory.cpp  ScanDirectory.h  UpdateLinkTargets.cpp  UpdateLinkTargets.h
ui/components/: IconButton.qml  SidebarToggleButton.qml  WindowControlButton.qml
ui/core/: BinPanel.qml  DragOverlay.qml  EmptyState.qml  NewTabView.qml  SettingsPanel.qml  TabStrip.qml  VaultSelectionOverlay.qml
ui/dialogs/: CustomDialog.qml  DeleteConfirmDialog.qml  NewFolderDialog.qml
ui/editor/: EditorHeader.qml  LivePreviewEditor.qml  NoteBody.qml  NoteEditor.qml  NotePicker.qml  NoteTitle.qml
ui/graph/: GraphNode.qml  GraphView.qml
ui/sidebar/: FileTree.qml  FolderTreeItem.qml  Sidebar.qml  SidebarHeader.qml  SidebarSearch.qml  TreeChevron.qml  TreeContextMenu.qml
ui/windows/: BinWindow.qml
(+8 files in other folders)
